--- a/module_1.ipynb
+++ b/module_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "module 1",
       "provenance": [],
-      "authorship_tag": "ABX9TyMpX1f5iw5WRIto3TL28iep",
+      "authorship_tag": "ABX9TyN6HG/R6J6higc1FSy1YTtI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "uldPaz2XdY4o"
       },
@@ -55,7 +55,7 @@
         "id": "fsl-fQAcdus7",
         "outputId": "e48261f7-292f-488a-cba5-4824088ec744"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -76,68 +76,36 @@
         "  print(a)"
       ],
       "metadata": {
+        "id": "hLc8iqNfekbC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#USE OF PRINT STATEMENTS AND USE OF (.format) FOR PRINTING DIFFERENT DATA TYPES\n",
+        "price=150\n",
+        "quantity=3\n",
+        "item=1\n",
+        "name=\"Thumpsup\"\n",
+        "myorder=\"I bought {3} with {0} having {1} and purchased {2}\"\n",
+        "print(myorder.format(price,quantity,item,name))"
+      ],
+      "metadata": {
+        "id": "Nef1AO-6OzLT",
+        "outputId": "2268a15d-0849-482d-b40d-51fe7ff57a2e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "hLc8iqNfekbC",
-        "outputId": "2ab3536a-b995-4a71-f405-a13100a1be1b"
+        }
       },
-      "execution_count": 10,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "101\n",
-            "103\n",
-            "105\n",
-            "107\n",
-            "109\n",
-            "111\n",
-            "113\n",
-            "115\n",
-            "117\n",
-            "119\n",
-            "121\n",
-            "123\n",
-            "125\n",
-            "127\n",
-            "129\n",
-            "131\n",
-            "133\n",
-            "135\n",
-            "137\n",
-            "139\n",
-            "141\n",
-            "143\n",
-            "145\n",
-            "147\n",
-            "149\n",
-            "151\n",
-            "153\n",
-            "155\n",
-            "157\n",
-            "159\n",
-            "161\n",
-            "163\n",
-            "165\n",
-            "167\n",
-            "169\n",
-            "171\n",
-            "173\n",
-            "175\n",
-            "177\n",
-            "179\n",
-            "181\n",
-            "183\n",
-            "185\n",
-            "187\n",
-            "189\n",
-            "191\n",
-            "193\n",
-            "195\n",
-            "197\n",
-            "199\n"
+            "I bought Thumpsup with 150 having 3 and purchased 1\n"
           ]
         }
       ]
@@ -167,7 +135,7 @@
         "id": "gk2AcfKVep58",
         "outputId": "2716c412-0a79-430c-ed5d-986ecfaf4c8a"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,7 +160,7 @@
       "metadata": {
         "id": "I8WMcrDpgt63"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -217,7 +185,7 @@
         "id": "UaqEdsCFg0V_",
         "outputId": "cbcf2f8c-c0e4-475a-dd49-afcb5673efdd"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -249,7 +217,7 @@
         "id": "XBF1egBDkR4C",
         "outputId": "46ecb749-1e3a-4df0-81f4-ac09179483f0"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -287,7 +255,7 @@
         "id": "0_M8SVHUkveS",
         "outputId": "9b10e7ac-0979-4a58-99e6-0f6d1a2d5b69"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -353,7 +321,7 @@
         "id": "gbjB0cPumdLT",
         "outputId": "d1d6d56f-a0db-4a67-e702-6710ebb0c856"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -397,52 +365,10 @@
         "   print(i)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "TROW6JLjpJh9",
-        "outputId": "fa7e2830-5171-4923-d22d-961163411b19"
+        "id": "TROW6JLjpJh9"
       },
-      "execution_count": 42,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "enter range 60\n",
-            "2\n",
-            "4\n",
-            "6\n",
-            "8\n",
-            "10\n",
-            "12\n",
-            "14\n",
-            "16\n",
-            "18\n",
-            "20\n",
-            "22\n",
-            "24\n",
-            "26\n",
-            "28\n",
-            "30\n",
-            "32\n",
-            "34\n",
-            "36\n",
-            "38\n",
-            "40\n",
-            "42\n",
-            "44\n",
-            "46\n",
-            "48\n",
-            "50\n",
-            "52\n",
-            "54\n",
-            "56\n",
-            "58\n",
-            "60\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
